# indic-trans

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
scripts/: 00_script_config.sh  01_setup_python.sh  03_run_any.sh  11_indictrans_cli.sh  12_indictrans_test.sh
src/indictrans/apps/: indictrans_cli.py
src/indictrans/base/: HandleConstants.py  HandleWXConstants.py
src/indictrans/models/: npzdata.npz  vecdata.npz
src/indictrans/putils/: __init__.py  beamsearch.pyx  ctranxn.pyx  sparseadd.pyx  viterbi.pyx
src/indictrans/utils/: BaseTransliterator.py  HandleCommonUtils.py  HandleDecoders.py  OneHotEncoder.py  ScriptTransliterator.py  StructuredPerceptron.py  Transliterator.py  UrduNormalizer.py  WXEncoder.py
tests/: test_trans.py
